Continued implementing circle formation algo.